fix: typos and routes
