# routes/technologies.js
@@ -7,10 +7,10 @@ const technologiesController = require('../controllers/technologies');
 router.post('/', validator.technologiesValidation, technologiesController.addTechnologies);
 
 router.get('/', technologiesController.getAll);
-router.get('/:id', technologiesController.getSingle);
+router.get('/:project', technologiesController.getSingle);
 
 router.put('/:id', validator.technologiesValidation, technologiesController.updateTechnologies);
 
-router.delete('/:project', technologiesController.deleteTechnologies);
+router.delete('/:id', technologiesController.deleteTechnologies);
 
 module.exports = router;
